[package]
name = "stick"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["stick_proc"]

[dev-dependencies]
reqwest = "0.10.4"
anyhow = "1.0.28"

[dependencies]
stick_proc = { path = "stick_proc" }
http = "0.2.1"
thiserror = "1.0.14"
