[package]
name = "stick"
version = "0.1.0"
authors = ["Dawid J. Kubis <dawidkubis@hitler.rocks>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
reqwest = "0.10.4"
rayon = "1.3.1"
anyhow = "1.0.28"

[dependencies]
http = "0.2.1"
thiserror = "1.0.14"
